# kintsugi-math

./: AGENT.md  README.md  pyproject.toml
src/kintsugi_math.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/kintsugimath/: __init__.py  cracks.py  fragments.py  golden_repair.py  resilience.py  wabi_sabi.py
tests/: test_all.py
