[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kintsugi-math"
version = "0.1.0"
description = "The mathematics of beautiful error recovery — fault tolerance as an aesthetic principle"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]
